# vision

./: .gitignore  LICENSE  README.md
01_basic_concepts/1_read_image/: main.cpp  main_namespace.cpp
01_basic_concepts/2_canny_edges/: Makefile  main.cpp
01_basic_concepts/3_erode_dilate/: erode_dilate  main.cpp
01_basic_concepts/4_pixels/: main.cpp  pixels
01_basic_concepts/5_camera/: Makefile  main.cpp
01_basic_concepts/6_camera_processing/: Makefile  camera_processing  main.cpp
01_basic_concepts/7_color_space/: main.cpp
01_basic_concepts/8_transformation/: Makefile  main_slide.cpp  resize  resize.cpp  rotation  rotation.cpp  translation  translation.cpp
01_basic_concepts/canny_edges/: main.cpp
02_basic_concepts/02_01_read_image/: main.cpp  main_namespace.cpp
02_basic_concepts/02_02_pixels/: Makefile  main.cpp
02_basic_concepts/02_03_color_space/: Makefile  main.cpp
02_basic_concepts/02_04_video/: Makefile  main.cpp
02_basic_concepts/1_read_image/: Makefile
02_basic_concepts/2_pixels/: Makefile
02_basic_concepts/3_color_space/: colors
02_basic_concepts/8_transformation/: translation.cpp
03_spatial_and_transformation_domain/03_01_fourier/: Makefile  frequencies.cpp  main.cpp
03_spatial_and_transformation_domain/03_02_cosine/: Makefile  main.cpp
03_spatial_and_transformation_domain/03_03_wavelets/: Makefile  main.cpp  main_haar.cpp  main_mahavir.cpp
03_spatial_and_transformation_domain/03_04_pixel_to_pixel/: Makefile  main.cpp
03_spatial_and_transformation_domain/03_05_neighborhood/: Makefile  main.cpp
03_spatial_and_transformation_domain/03_06_logic/: Makefile  main.cpp
04_transformations_and_corrections/04_01_geometric_transformations/: Makefile  inclination.cpp  main.cpp  resize.cpp  rotation.cpp  translation.cpp
04_transformations_and_corrections/04_02_smoothing/: Makefile  main.cpp
04_transformations_and_corrections/04_03_histogram/: Makefile  main.cpp
04_transformations_and_corrections/04_03_histogram_equalization/: Makefile  main.cpp
04_transformations_and_corrections/04_04_histogram_comparison/: Makefile  main.cpp
04_transformations_and_corrections/04_04_histogram_matching/: Makefile  main.cpp  pixel_to_pixel
05_edges_and_regions/05_01_sobel_edges/: Makefile  main.cpp
05_edges_and_regions/05_02_canny_edges/: main.cpp
05_edges_and_regions/05_03_Harris/: Makefile  main.cpp
05_edges_and_regions/05_04_SURF_detection/: Makefile  main.cpp
05_edges_and_regions/05_04_hough_circles/: main.cpp
05_edges_and_regions/05_05_SURF_description/: main.cpp
05_edges_and_regions/05_05_threshold/: main.cpp
05_edges_and_regions/05_06_RANSAC/: RANSAC  main.cpp
05_edges_and_regions/05_06_contours/: main.cpp
05_edges_and_regions/05_06_threshold/: main.cpp
05_edges_and_regions/05_07_hough_lines/: Makefile  main.cpp
05_edges_and_regions/05_07_moments/: main.cpp
05_edges_and_regions/05_07_threshold/: Makefile  main.cpp
05_edges_and_regions/05_08_hough_circles/: main.cpp
05_edges_and_regions/05_08_hough_lines/: main.cpp
05_edges_and_regions/05_09_contours/: main.cpp
05_edges_and_regions/05_09_hough_circles/: Makefile  main.cpp
05_edges_and_regions/05_10_SURF_description/: main.cpp
05_edges_and_regions/05_10_contours/: Makefile  main.cpp
05_edges_and_regions/05_10_moments/: Makefile  main.cpp
05_edges_and_regions/05_11_RANSAC/: Makefile  main.cpp
05_edges_and_regions/05_11_moments/: main.cpp
05_segmentation_and_features/05_01_sobel/: Makefile  main.cpp
05_segmentation_and_features/05_02_canny/: Makefile  main.cpp
05_segmentation_and_features/05_03_laplacian/: Makefile  main.cpp
05_segmentation_and_features/05_04_hough_lines/: Makefile  main.cpp
05_segmentation_and_features/05_05_hough_circles/: Makefile  main.cpp
05_segmentation_and_features/05_06_threshold/: Makefile  main.cpp
05_segmentation_and_features/05_07_contours/: Makefile  main.cpp
05_segmentation_and_features/05_08_moments/: Makefile  main.cpp
05_segmentation_and_features/05_09_chain_code/: Makefile  main.cpp
05_segmentation_and_features/05_10_harris_corners/: Makefile  main.cpp
05_segmentation_and_features/05_11_good_features/: Makefile  main.cpp
05_segmentation_and_features/05_12_orb/: Makefile  main.cpp
05_segmentation_and_features/05_13_ransac_matching/: Makefile  main.cpp
05_segmentation_and_features/05_14_connected_components/: Makefile  main.cpp
06_morphological_operations/06_01_erode_dilate/: Makefile  main.cpp
06_morphological_operations/06_02_opening_closing/: Makefile  main.cpp
06_morphological_operations/06_03_contour/: Makefile  main.cpp
06_morphological_operations/06_03_morphological_gradient/: Makefile  main.cpp
06_morphological_operations/06_04_skeleton/: Makefile  main.cpp
06_morphological_operations/06_04_skeletonization/: Makefile  main.cpp
06_morphological_operations/06_05_fill/: Makefile  main.cpp
06_morphological_operations/06_05_flood_fill/: Makefile  main.cpp
07_calibration/07_01_camera_calibration/: Makefile  main.cpp
07_camera_calibration/07_01_camera_calibration/: Makefile  main.cpp
08_3D_vision/08_01_disparity/: main.cpp
08_3D_vision/08_02_ICP/: main.cpp
08_3D_vision/08_03_PCL_write/: CMakeLists.txt  main.cpp
08_stereo_and_3d/08_03_pcl_write/: CMakeLists.txt  main.cpp
08_stereo_and_3d/08_04_pcl_read/: CMakeLists.txt  main.cpp
08_stereo_and_3d/08_05_pcl_simple_visualizer/: CMakeLists.txt  main.cpp
08_stereo_and_3d/08_07_pcl_icp/: CMakeLists.txt  main.cpp
08_stereo_and_3d/08_08_pcl_registration/: CMakeLists.txt  main.cpp
08_stereo_and_3d/08_09_pcl_correspondence/: CMakeLists.txt  main.cpp
08_stereo_and_3d/08_10_pcl_ransac_registration/: CMakeLists.txt  main.cpp
09_3D_vision/09_07_PCL_ICP/: CMakeLists.txt  main.cpp
09_3D_vision/09_08_PCL_registration/: CMakeLists.txt  main.cpp
09_3D_vision/09_10_PCL_RANSAC/: CMakeLists.txt  main.cpp
canny_edges/: main.cpp
data/: create_checkerboard.py  create_shapes.py  parasaurolophus_rotated45.ply  parasaurolophus_source.ply  parasaurolophus_target.ply
read_image/: Makefile  main.cpp  main_namespace.cpp
(+68 files in other folders)
